@@ -27,12 +27,13 @@ domain.
 ZopeMessageFactory
 ------------------
 
-  >>> from zope.i18nmessageid import ZopeMessageFactory as _z_
-  >>> foo = _z_('foo')
-  >>> foo.domain
-  'zope'
-  
+A message factory for the 'zope' translation domain is available for
+direct import.
 
+  >>> from zope.i18nmessageid import ZopeMessageFactory as _
+  >>> msg = _('foo')
+  >>> msg.domain
+  'zope'
 
 Example
 -------
@@ -42,14 +43,16 @@ convention, we use _ as the name of our factory to be compatible with
 translatable string extraction tools such as xgettext.  We then call _
 with a string that needs to be translatable:
 
-  >>> from zope.i18nmessageid import MessageFactory, Message
+  >>> from zope.i18nmessageid import MessageFactory  
   >>> _ = MessageFactory("futurama")
+  
   >>> robot = _(u"robot-message", u"${name} is a robot.")
 
 Messages at first seem like they are unicode strings:
 
   >>> robot
   u'robot-message'
+  
   >>> isinstance(robot, unicode)
   True
 
@@ -58,56 +61,12 @@ through attributes:
 
   >>> robot.default
   u'${name} is a robot.'
-  >>> robot.mapping
+  
   >>> robot.domain
   'futurama'
 
 The message's attributes are considered part of the immutable message
-object.  They cannot be changed once the message id is created:
-
-  >>> robot.domain = "planetexpress"
-  Traceback (most recent call last):
-  ...
-  TypeError: readonly attribute
-
-  >>> robot.default = u"${name} is not a robot."
-  Traceback (most recent call last):
-  ...
-  TypeError: readonly attribute
-
-  >>> robot.mapping = {u'name': u'Bender'}
-  Traceback (most recent call last):
-  ...
-  TypeError: readonly attribute
-
-If you need to change their information, you'll have to make a new
-message id object:
-
-  >>> new_robot = Message(robot, mapping={u'name': u'Bender'})
-  >>> new_robot
-  u'robot-message'
-  >>> new_robot.domain
-  'futurama'
-  >>> new_robot.default
-  u'${name} is a robot.'
-  >>> new_robot.mapping
-  {u'name': u'Bender'}
-
-Last but not least, messages are reduceable for pickling:
-
-  >>> callable, args = new_robot.__reduce__()
-  >>> callable is Message
-  True
-  >>> args
-  (u'robot-message', 'futurama', u'${name} is a robot.', {u'name': u'Bender'})
-
-  >>> fembot = Message(u'fembot')
-  >>> callable, args = fembot.__reduce__()
-  >>> callable is Message
-  True
-  >>> args
-  (u'fembot', None, None, None)
-
+object. They cannot be changed once the message id is created.
 
 Message IDs and backward compatability
 --------------------------------------
@@ -132,3 +91,6 @@ The roadmap to immutable-only message ids is proposed as follows:
   Zope 3.2: Mutable message ids are deprecated.
 
   Zope 3.3: Mutable message ids are removed.
+
+
+  
